2000-10-18  Lars Wirzenius  <liw@iki.fi>

	* gw/urltrans.c: Fix off-by-one error in is_safe array size
	in encode_for_url().

2000-10-18  Lars Wirzenius  <liw@iki.fi>

	* gw/bearerbox.c, gw/smsbox.c, gw/wapbox.c: Added missing #include
	"shared.h".

2000-10-17  Lars Wirzenius  <liw@iki.fi>

    	* gwlib/gwlib.c: Reformatted to new coding style.
	
	* gw/shared.[ch]: New files to hold the function report_versions
	(and other functions in the future). This function reports the
	version of Kannel that starts up, and the host it runs on, and
	the version of libxml.

	* gw/bearerbox.c, gw/smsbox.c, gw/wapbox.c: Call report_versions.

2000-10-17  Tuomas Luttinen  <tuo@wapit.com>

	* gw/urltrans.c: Changed the logic in the encode_for_url so that the
	safe ones are listed and the save characters being alphanums and marks
	"-", "_", ".", "!", "~", "*", "'", "(", ")". Also UTF-8 with full 
	spectrum of Unicode should work now.

2000-10-17  Kalle Marjola  <rpr@wapit.com>

	* gw/smsbox.c: Added requested event of sent message

2000-10-16  Lars Wirzenius  <liw@iki.fi>

	* gwlib/log.c: Reformatted. Also made kannel_syslog's mapping of
	Kannel's log level to syslog log levels actually work.

2000-10-16  Lars Wirzenius  <liw@iki.fi>

	* checks/check_counter.c, checks/check_date.c,
	checks/check_list.c, checks/check_octstr.c, gwlib/log.c,
	gwlib/log.h, gwlib/utils.c: Renamed the log level enums to have
	a GW_ prefix, to avoid problems with broken compilers that define
	ERROR themselves or in some header.

2000-10-16  Lars Wirzenius  <liw@iki.fi>

	* config.h.in, configure{,.in}: Check for the magic compiler
	(not preprocessor) symbols __func__ (standard in the 1999 version
	of the standard) and __FUNCTION__ (popular extension to the 1989
	version of the standard). Define __func__ as __FUNCTION__ or
	"unknown" depending on what is available.
	
	* gwlib/gwassert.h, gwlib/gwmem.h, gwlib/octstr.c: Use __func__
	instead of __FUNCTION__.

2000-10-16  Lars Wirzenius  <liw@iki.fi>
