@@ -1,3 +1,12 @@
+2000-10-18  Kalle Marjola  <rpr@wapit.com>
+
+	* gw/bearerbox.c: updated 'status' to tell number of messages
+	still queued in main queues (internal specific queues are not yet
+	counted)
+
+	* gw/bx_*.c: Did initial code changes for 'xmlstatus' query,
+	although it does not return anything yet.
+
 2000-10-18  Lars Wirzenius  <liw@iki.fi>
 
 	* gw/urltrans.c: Fix off-by-one error in is_safe array size
